--- a/evcc/config.json
+++ b/evcc/config.json
@@ -1,6 +1,6 @@
 {
     "name": "evcc",
-    "version": "0.112.6",
+    "version": "0.112.5",
     "slug": "evcc",
     "description": "EV Charge Controller!",
     "url": "https://github.com/J1Buskens/evcc",
@@ -14,7 +14,7 @@
     "ingress": true,
     "ingress_port": 7070,
     "init": false,
-    "image": "evcc/evcc",
+    "image": "j1buskens/evcc",
     "options": {
         "config_file": "/config/evcc.yaml",
         "sqlite_file": "/data/evcc.db"
