--- a/evcc/config.json
+++ b/evcc/config.json
@@ -1,6 +1,6 @@
 {
     "name": "evcc",
-    "version": "latest",
+    "version": "0.114.1",
     "slug": "evcc",
     "description": "EV Charge Controller!",
     "url": "https://github.com/J1Buskens/evcc",
